Thanks to MartinsSmirnovs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
+// Thanks to https://github.com/MartinsSmirnovs/RTR105 example
+
 // add Clang-Format extension before
 // place clang-format executable
 {
